# task-notes-full

./: Cargo.toml  README.md
model/: .env  Cargo.toml
model/migrations/2019-05-13-052458_create_user/: up.sql
model/migrations/2019-05-13-053446_create_project/: down.sql  up.sql
model/migrations/2019-05-13-063700_create_task/: down.sql  up.sql
model/migrations/2019-05-13-072454_create_task_list/: down.sql  up.sql
model/migrations/2019-05-23-120339_add_priority_to_projects/: down.sql  up.sql
model/migrations/2019-07-27-145357_add_references/: down.sql  up.sql
model/src/: lib.rs  models.rs  schema.rs
task-notes-backend/: Cargo.toml  Procfile  README.md
task-notes-backend/src/: auth.rs  auth_middleware.rs  config.rs  lib.rs  main.rs
task-notes-backend/src/api/: mod.rs
task-notes-backend/templates/: base.html  index.html  login.html
task-notes-gui/: Cargo.toml  index.html
task-notes-gui/assets/: sw.js
task-notes-gui/src/: app.rs  lib.rs  main.rs
task-notes-gui/src/api/: action.rs  common.rs  mod.rs
