[package]
name = "backend"
version = "0.1.0"
authors = ["kein"]
edition = "2018"

[dependencies]
diesel = { version = "2.1.3", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
actix-web =  { version="4.4.0", features = ["openssl"] }
actix-service = "2.0.2"
actix-files = "0.6.2"
oauth2 = "4.4.2"
actix-http = "3.4.0"
bytes = "1.5"
futures = "0.3.29"
env_logger = "*"
serde = "1.0"
tera = "1.19.1"
serde_json = "1.0"
serde_derive = "1.0"
actix-cors = "0.6.4"
model = { path = "../model" }
json = "*"
url = "2.4.1"
r2d2 = "0.8"
actix-identity = "0.6.0"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
awc = { version ="3.2.0", features = ["openssl"] }
log = "0.4.20"