[package]
name = "task-notes-gui"
version = "0.1.0"
edition = "2021"
rust-version = "1.71"

[dependencies]
poll-promise = {version = "0.3.0", features = ["web"] }
egui = {version="0.23.0", features = ["persistence", "serde"]}
eframe = { version = "0.23.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "serde",
    "persistence",   # Enable restoring app state when restarting the app.
] }
reqwest = "0.11.22"
log = "0.4"
model = { path = "../model" }
wasm-bindgen = { version = "0.2.88", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.38"
serde-wasm-bindgen = "0.4"
# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2



